# Http-Server-From-Scratch

./: CMakeLists.txt  README.md  client.c  handleRoutes.c  handleRoutes.h  main.c  server.c
html/: index.html
server/: HTTPRequest.c  HTTPRequest.h  HTTPResponse.c  HTTPResponse.h  HandleGetRequest.c  HandleGetRequest.h  Server.c  Server.h  server.c  test.c
